# email_newsletter

./: .dockerignore  Cargo.toml  Dockerfile
.github/workflows/: ci.yaml
.sqlx/: query-3c60f00b84c50c39320aec729a6f0635256b27a7df2b4d2a8aeb70cd2808ed68.json
configuration/: base.yaml  production.yaml
migrations/: 20250505105820_create_subscriptions_table.sql  20250510191921_make_subscription_status_not_null.sql  20250510192333_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: helpers.rs  subscriptions.rs  subscriptions_confirm.rs
